overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   margin: auto;
   border-radius: 5px;
   background-color: white;
-
+  overflow: hidden;
   text-align: center;
 }
 /* animation for cards */
